--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="cta" href="#">Download Excursion (Coming soon!)</a>
       </p>
           <video autoplay="" muted="" loop="">
-            <source src="Resources/video/excursion.mp4" type="video/mp4">
+            <source src="excursion/Resources/video/excursion.mp4" type="video/mp4">
           </video>
     <!--"First Supporting Section"-->
     <h2>
@@ -28,7 +28,7 @@
   </p>
   <!-- "Second supporting section" -->
   <p>
-  <img class="app" src="resources/images/phone.png">
+  <img class="app" src="excursion/resources/images/phone.png">
   </p>
   <h2>
     Coming Soon for iPhone and Android
